fix(style): hide table cell content if too long

--- a/src/components/seal-table/styles/cell.less
+++ b/src/components/seal-table/styles/cell.less
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: flex-start;
   height: 68px;
+  word-break: break-word;
 
   .cell-content {
     max-width: 100%;
